WIP cookie storage

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,5 +13,6 @@ rustc-hash = "1.1.0"
 serde = { version = "1.0.7", features = ["derive"] }
 postcard = { version = "1.0.2", features = ["use-std"] }
 once_cell = "1.17.0"
-web-sys = { version = "0.3.61", features = ["Window", "Document", "Element"] }
+web-sys = { version = "0.3.61", features = ["Window", "Document", "Element", "HtmlDocument"] }
 yazi = "0.1.4"
+wasm-bindgen = "0.2"
