--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,3 +16,8 @@ once_cell = "1.17.0"
 web-sys = { version = "0.3.61", features = ["Window", "Document", "Element", "HtmlDocument", "Storage", "console"] }
 yazi = "0.1.4"
 wasm-bindgen = "0.2"
+
+
+[dev-dependencies]
+dioxus = { git = "https://github.com/dioxuslabs/dioxus" }
+dioxus-web = { git = "https://github.com/dioxuslabs/dioxus" }
