--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,10 @@
 name = "dioxus_storage"
 version = "0.0.1"
 edition = "2021"
+authors = ["Evan Almloff <evanalmloff@gmail.com>"]
+description = "A simple storage library for Dioxus"
+readme = "README.md"
+license = "MIT OR Apache-2.0"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
